# globus_map

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: ci.yml
apps/: 10_visualize_map.ipynb  index.html  main.css  main.js  nginx.conf
data/: README.md
data/processed/: deck.json  german_communities.parquet  globus_info.csv  globus_positions.parquet
processing/: 10_prepare_community_info.ipynb  20_build_deck_spec.ipynb
