[project]
name = "globus-map"
version = "0.0.0"
description = "Map that visualizes distance to nearest globus supermarket"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.2.2",
    "pre-commit>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length=100
[tool.ruff.lint]
select = ["ALL"]
[tool.ruff.lint.pydocstyle]
convention = "google"
