[project]
name = "globus-map"
version = "0.0.0"
description = "Map that visualizes distance to nearest globus supermarket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "nbconvert>=7.16.6",
    "pandas>=2.3.0",
    "panel>=1.7.0",
    "pyarrow>=18.0.0",
    "pydeck>=0.9.1",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.2.2",
    "pre-commit>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length=100
[tool.ruff.lint]
select = ["ALL"]
[tool.ruff.lint.pydocstyle]
convention = "google"
